--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>ich bein ein berliner</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>here</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>stuff</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>things</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>places</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>because</p>
     </section>
 
     <footer id="footer">
